# pico-temp

./: Cargo.toml
.cargo/: config.toml
src/: dht.rs  gpio.rs  main.rs
