[package]
name = "pico-temp"
version = "0.1.0"
authors = ["Philippe Laflamme <philippe.laflamme@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6.13"
rp2040-pac = { git = "https://github.com/rp-rs/rp2040-pac", branch="main" }
panic-halt = "0.2.0"
rp2040-boot2 = "0.1.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
